# ChangeLog for dev-perl/Error
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-perl/Error/ChangeLog,v 1.56 2009/07/02 19:33:02 jer Exp $

  02 Jul 2009; Jeroen Roovers <jer@gentoo.org> Error-0.17.012.ebuild:
  Stable for HPPA too.

  18 Nov 2008; Torsten Veller <tove@gentoo.org> Error-0.17.008.ebuild,
  Error-0.17.012.ebuild, Error-0.17.015.ebuild:
  New virtuals: module-build

*Error-0.17.015 (23 Aug 2008)

  23 Aug 2008; Torsten Veller <tove@gentoo.org> +Error-0.17.015.ebuild:
  Version bump

  15 Jul 2008; Raúl Porcel <armin76@gentoo.org> Error-0.17.012.ebuild:
  alpha/ia64/sparc/x86 stable

  23 Apr 2008; Torsten Veller <tove@gentoo.org> -Error-0.15-r2.ebuild,
  -Error-0.17.ebuild, -Error-0.17.004.ebuild, -Error-0.17.007.ebuild:
  Cleaning

*Error-0.17.012 (23 Apr 2008)

  23 Apr 2008; Torsten Veller <tove@gentoo.org> +Error-0.17.012.ebuild:
  Version bump (#216923)

  28 Mar 2008; Jeroen Roovers <jer@gentoo.org> Error-0.17.008.ebuild:
  Stable for HPPA too.

  29 Dec 2007; <welp@gentoo.org> Error-0.17.008.ebuild:
  Keyworded ~sparc-fbsd; bug 203655

  05 Jul 2007; Raúl Porcel <armin76@gentoo.org> Error-0.17.008.ebuild:
  alpha stable

  05 May 2007; Tobias Scherbaum <dertobi123@gentoo.org>
  Error-0.17.008.ebuild:
  ppc stable

  23 Apr 2007; Bryan Østergaard <kloeri@gentoo.org> Error-0.17.008.ebuild:
  Stable on Mips, bug 173327.

  15 Apr 2007; Markus Rothe <corsair@gentoo.org> Error-0.17.008.ebuild:
  Stable on ppc64

  19 Mar 2007; Javier Villavicencio <the_paya@gentoo.org>
  Error-0.17.008.ebuild:
  Add ~x86-fbsd keyword.

  05 Mar 2007; Andrej Kacian <ticho@gentoo.org> Error-0.17.008.ebuild:
  Stable on x86, bug #169152.

  08 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Error-0.17.008.ebuild:
  Marking sparc stable

  07 Jan 2007; Michael Cummings <mcummings@gentoo.org>
  Error-0.17.008.ebuild:
  Marking amd64 stable

  24 Dec 2006; Tobias Scherbaum <dertobi123@gentoo.org>