@@ -1,0 +1,26 @@
+# Copyright 1999-2009 Gentoo Foundation
+# Distributed under the terms of the GNU General Public License v2
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Error/Error-0.17.016.ebuild,v 1.2 2009/12/19 10:27:03 tove Exp $
+
+EAPI=2
+
+inherit versionator
+MODULE_AUTHOR=SHLOMIF
+MY_PV="$(delete_version_separator 2)"
+MY_P="${PN}-${MY_PV}"
+S=${WORKDIR}/${MY_P}
+inherit perl-module
+
+DESCRIPTION="Error/exception handling in an OO-ish way"
+
+SLOT="0"
+KEYWORDS="~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~sparc-fbsd ~x86-fbsd"
+IUSE="test"
+
+RDEPEND=""
+DEPEND="${RDEPEND}
+	virtual/perl-Module-Build
+	test? ( >=dev-perl/Test-Pod-1.14
+		>=dev-perl/Test-Pod-Coverage-1.04 )"
+
+SRC_TEST="do"
