@@ -1,8 +1,20 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 DIST Error-0.17008.tar.gz 16825 RMD160 d4b16dd7bc77092a5bb5d92500d3579b429131bf SHA1 b3429b71f98208658aea5092e229d5fca2157807 SHA256 05da809b6e62cc1d7196ee5f4a0b1662128f0908a8446afb997b5c22bae6720d
 DIST Error-0.17012.tar.gz 17713 RMD160 f5e92e7cd955399342714748367fbae773f65ebe SHA1 fb4166b0a5bced202a768b35c59ebf48580727b3 SHA256 6b356230f4a81e2754f2e87144739cdb28e91641b949e2d78c1d1bb4bcc3257a
 DIST Error-0.17015.tar.gz 18053 RMD160 2beaaecdfaebd7d891a5d06386a024275767d1a2 SHA1 0dde379f26f2d4eb91441ed613a411c534588ba3 SHA256 4bd1771e60cbeba3ed13c7c811d8989ae8a49d4442512cd279e998cd62ce44c3
+DIST Error-0.17016.tar.gz 20990 RMD160 c19b2a20bd4b8c333c7a91c6444d47538246f3ea SHA1 c861ad15e8533bbbfc6dfb8a984c80c346072bd2 SHA256 f013a33ce33f324d6ff73ca074f34aa13f04bcec11e7f91c820c2e7b5e1979aa
 EBUILD Error-0.17.008.ebuild 741 RMD160 975a96dbc1afc2414a01fa51974914644a55028a SHA1 d7759423fa746a508742125007851b63ffc319c9 SHA256 84d9eaf75b64c3ad44b78f69a2f758dfeafd90cb30d01566cfe8a7fd36f2b5f7
 EBUILD Error-0.17.012.ebuild 805 RMD160 1587f886769eda58d55e5c75d3000222b10a3eb1 SHA1 84ca1f2b7d7a7e13612d10dc61adc3070d4be9f2 SHA256 30fef01576dac81a5f1255426e5208ec334f90d7dc75bba4760970b068caf6c1
 EBUILD Error-0.17.015.ebuild 814 RMD160 6e29c46e91da641b79999d25f112d588375ac821 SHA1 042e5d437b77b07f98a08647cc72e9b0784f4026 SHA256 9e6d55c726af986aa54250d4d99eb76f631fa79b5d3b6b6941e5d50a4f4cdd8a
-MISC ChangeLog 6531 RMD160 bc00362c7d6bf9d68ac2f29a316b348f5ed9541c SHA1 4b0d24393fdeb57e1777ac738b68c0dd1ab4fcc1 SHA256 273df34f9fb0daa5987403ee6e5354e51805ebdb6df84406f6fb0025edc724ed
+EBUILD Error-0.17.016.ebuild 697 RMD160 6c963f2b46f0a63d8d30c18d693af7217c767eb7 SHA1 12230031a83080080f6dfed74828e2175502168c SHA256 79caaad7ab6f4bf81c3fc055a4a425524beed2aededba0771d19d2b5c47ca139
+MISC ChangeLog 6651 RMD160 72715974c2036ac968b3b0ce09d7a2e2da305e28 SHA1 130813177a7a6cc9d15601149d9c4a6ed082a8b7 SHA256 ade1b5df60ac1270843170656fbdbeb10f012fd7e48e453000b67618d8d83b12
 MISC metadata.xml 305 RMD160 647980838c590f54441a053916ea629e53e551c0 SHA1 99ef1deeae9a934fb6e46cf5fc4a5fcb8379a74a SHA256 f05dbef15061919972882cab07057e102760a542beba17d131194091401cd7ca
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v2.0.11 (GNU/Linux)
+
+iEYEARECAAYFAkssqoMACgkQV3J2n04EauzyCwCfSuC2dzifU0B6chVS+gc1u5jZ
+ysYAnikBrPzLvUE/7Afq3sGQOcp3dfGJ
+=mkic
+-----END PGP SIGNATURE-----
