@@ -1,0 +1,22 @@
+virtual/perl-Module-Build test? ( >=dev-perl/Test-Pod-1.14 >=dev-perl/Test-Pod-Coverage-1.04 ) dev-lang/perl[-build]
+dev-lang/perl[-build]
+0
+mirror://cpan/authors/id/S/SH/SHLOMIF//Error-0.17016.tar.gz
+
+http://search.cpan.org/dist/Error/
+|| ( Artistic GPL-2 )
+Error/exception handling in an OO-ish way
+~alpha ~amd64 ~arm ~hppa ~ia64 ~mips ~ppc ~ppc64 ~s390 ~sh ~sparc ~x86 ~sparc-fbsd ~x86-fbsd
+base eutils multilib perl-module portability toolchain-funcs versionator
+test
+
+
+
+2
+
+compile configure install prepare test unpack
+
+
+
+
+
