@@ -1,6 +1,11 @@
 # ChangeLog for dev-perl/Error
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-perl/Error/ChangeLog,v 1.56 2009/07/02 19:33:02 jer Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-perl/Error/ChangeLog,v 1.57 2009/12/19 10:24:01 tove Exp $
+
+*Error-0.17.016 (19 Dec 2009)
+
+  19 Dec 2009; Torsten Veller <tove@gentoo.org> +Error-0.17.016.ebuild:
+  Version bump
 
   02 Jul 2009; Jeroen Roovers <jer@gentoo.org> Error-0.17.012.ebuild:
   Stable for HPPA too.
